[package]
name = "aoc2020_06b"
version = "0.1.0"
authors = ["Giovanni Foiani <giovanni.foiani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "~1.0.3"

[[bin]]
name = "aoc2020_06b"
path = "main.rs"
